--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: my_database_development
+  database: sample_app_dev_db
   pool: 5
   timeout: 5000
   username: sample_app
@@ -16,7 +16,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: my_database_test
+  database: sample_app_test_db
   pool: 5
   timeout: 5000
   username: sample_app
@@ -24,7 +24,7 @@ test:
 
 production:
   adapter: postgresql
-  database: my_database_production
+  database: sample_app_prod_db
   pool: 5
   timeout: 5000
   username: sample_app
